<resources>
    <string name="app_name">Event Reminder</string>
    <string name="home">Home</string>
    <string name="Sign_out_from_goole">Sign out from google </string>
    <string name="please_sign_in">Please sign in to your google account</string>
    <string name="Sign_out_from_facebook">Sign out fro Facebook</string>
    <string name="Sign_out">Sign out</string>
    <string name="google">Google calendar events</string>
    <string name="facebook">Facebook</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="Details">Details : </string>
    <string name="date">Date : </string>
    <string name="time">Start time : </string>

    <string name="facebook_app_id">880149515686126</string>
    <string name="fb_login_protocol_scheme">fb880149515686126</string>
    <string name="select_event">Select event to reschedule </string>
    <string name="note">Note : the selected event to reschedule will be deleted from the events to be updated from it\'s creator</string>
    <string name="discard">Discard</string>
    <string name="two_event_overlapped">Two Event overlapped</string>
    <string name="to_be_reschduled">Event time to be rescheduled : </string>
    <string name="you_can_select_your">you can select you\'r preferred time</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Do_You_want_to_send_email_to">Do you want to send email to :</string>
    <string name="confirm">Confirm</string>
    <string name="event_creator">Event creator</string>
    <string name="your_email">Your Email</string>
    <string name="name">User Name</string>
    <string name="profile">Profile</string>
    <string name="events_list">Events</string>
    <string name="enter_current_city_name">Enter your current city name</string>
    <string name="city_name">City Name</string>
    <string name="city">City</string>
</resources>
