<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shadow"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/enter_current_city_name"
        android:textColor="@color/black"
        android:textDirection="locale"
        android:textSize="18sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/name_edt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/white_round_shape"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/city_name"
        android:inputType="textEmailAddress"
        android:layoutDirection="locale"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp"
      />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        >
        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/black_square_shape"
            android:text="@string/confirm"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/discard_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/black_square_shape"
            android:text="@string/discard"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            />
    </LinearLayout>


</LinearLayout>