<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/liner_menu_items"
    android:layout_height="match_parent"
    android:layout_width="240dp"
    android:background="@color/black"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/logo" />


    <Button
        android:id="@+id/user_profile_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/white_square_shape"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="4dp"
        android:padding="4dp"
        android:layout_gravity="bottom"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/events_list_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/white_square_shape"
        android:drawableStart="@drawable/ic_list_black_24dp"
        android:drawablePadding="4dp"
        android:padding="4dp"
        android:layout_gravity="bottom"
        android:text="@string/events_list"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:visibility="visible"
        tools:visibility="visible" />


    <Button
        android:id="@+id/out_from_google_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/white_square_shape"
        android:drawableStart="@drawable/google_logo_ic"
        android:drawablePadding="4dp"
        android:padding="4dp"
        android:layout_gravity="bottom"
        android:text="@string/Sign_out"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:visibility="visible"
        tools:visibility="visible" />

</LinearLayout>

